--- a/resources/views/test/index.html
+++ b/resources/views/test/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>OkChain Staking</title>
 </head>
 <body>
-<h2>Hello World!!</h2>
+<h2>OkChain Staking Vote Tool Power By DAppBirds </h2>
 </body>
 </html>
